tests/dataset/tpc-ds/compiler/go/q4.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:224:5: unknown field Dyear in struct literal of type v
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:225:5: unknown field Year_total in struct literal of type v
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:225:21: any does not satisfy constraints.Integer | constraints.Float
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:229:56: x.Ss_ext_list_price undefined (type Customer has no field or method Ss_ext_list_price)
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:229:90: x.Ss_ext_wholesale_cost undefined (type Customer has no field or method Ss_ext_wholesale_cost)
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:229:129: x.Ss_ext_discount_amt undefined (type Customer has no field or method Ss_ext_discount_amt)
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:229:167: x.Ss_ext_sales_price undefined (type Customer has no field or method Ss_ext_sales_price)
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:233:5: unknown field Sale_type in struct literal of type v
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:278:5: unknown field Dyear in struct literal of type v
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:279:5: unknown field Year_total in struct literal of type v
/tmp/TestGoCompiler_TPCDSq42089190771/001/main.go:279:5: too many errors
